--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "intranet service for myclinic",
   "main": "index.js",
   "scripts": {
+    "compile": "tsc -p browser-src --watch",
+    "bundle": "webpack browser-src/main.js static/bundle.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/hangilc/myclinic-intraclinic/issues"
   },
-  "homepage": "https://github.com/hangilc/myclinic-intraclinic#readme"
+  "homepage": "https://github.com/hangilc/myclinic-intraclinic#readme",
+  "devDependencies": {
+    "@types/jquery": "^2.0.39",
+    "jquery": "^3.1.1",
+    "myclinic-web": "^1.0.11",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "express-session": "^1.14.2"
+  }
 }
