--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jquery": "^2.0.39",
     "jquery": "^3.1.1",
     "kanjidate": "^1.1.2",
+    "moment": "^2.17.1",
     "myclinic-web": "^1.0.11",
     "webpack": "^1.14.0"
   },
